Mettre à jour CORS pour utiliser une variable d'environnement